# tristrip

./: .gitignore  CMakeLists.txt  README.rst  UseCython.cmake  runastyle.sh  setup.py  trianglemesh.cpp  trianglemesh.hpp  tristrip.py  tristrip.pyx
include/: trianglemesh.hpp  trianglestripifier.hpp  tristrip.hpp
python/: CMakeLists.txt  pytristrip.pyx
src/: trianglemesh.cpp  trianglestripifier.cpp  tristrip.cpp
test/: CMakeLists.txt  pytristrip_test.py  trianglemesh_test.cpp  trianglestrip_test.cpp  trianglestripifier_test.cpp
